# sns-sqs-lambda-poc

./: .gitignore  README.md
ops/terraform/: main.tf  terraform.tf
src/main/: config.py  factory.py  main.py  pyproject.toml
src/main/domain/: order.py
src/main/infra/: logger.py  sns_repository.py  sqs_repository.py  utils.py
src/main/tests/: builders.py  conftest.py
src/main/tests/acceptance/: test_api.py
src/main/tests/integration/: test_place_order_api.py  test_sns_repostiory.py
src/main/tests/unit/: test_order.py
src/orders/: config.py  factory.py  handler.py  requirements.txt
src/orders/domain/: order.py
src/orders/infra/: s3_repository.py  utils.py
src/status/: handler.py
